--- a/.github/workflows/MyFirstWorkFlow.yml
+++ b/.github/workflows/MyFirstWorkFlow.yml
@@ -9,9 +9,9 @@ jobs:
     name: My first job
     runs-on: ubuntu-latest
     steps:
-      - run echo "Hello world from ${{github.actor}}."
+      - run: echo "Hello world from ${{github.actor}}."
       - name: Checkout
         uses: actions/checkoput@v5.0.0
-        - run: tree
+      - run: tree
     
     
