--- a/.github/workflows/MyFirstWorkFlow.yml
+++ b/.github/workflows/MyFirstWorkFlow.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
     - run: |
         echo "Hello ${{ vars.WHO_TO_GREET }} from ${{ github.actor }}."
-        sec=$(echo ${{ secret.MY_SECRET }} | sed 's/./& /g')
+        sec=$(echo ${{ secrets.MY_SECRET }} | sed 's/./& /g')
         echo "Mysecret is '$sec'."
   Load-Test:
     runs-on: ubuntu-latest
