--- a/.github/workflows/MyFirstWorkFlow.yml
+++ b/.github/workflows/MyFirstWorkFlow.yml
@@ -28,6 +28,11 @@ jobs:
     runs-on: ubuntu-latest
     environment: Load-Test
     needs: [first_job]
+    steps:
+    - run: |
+        echo "Hello ${{ vars.WHO_TO_GREET }} from ${{ github.actor }}."
+        sec=$(echo ${{ secrets.MY_SECRET }} | sed 's/./& /g')
+        echo "Mysecret is '$sec'."
   Production: 
     runs-on: ubuntu-latest
     environment:
