--- a/.github/workflows/MyFirstWorkFlow.yml
+++ b/.github/workflows/MyFirstWorkFlow.yml
@@ -39,3 +39,8 @@ jobs:
       name: Production
       url: http://writeabout.net
     needs: [Test, Load-Test]
+    steps:
+    - run: |
+        echo "Hello ${{ vars.WHO_TO_GREET }} from ${{ github.actor }}."
+        sec=$(echo ${{ secrets.MY_SECRET }} | sed 's/./& /g')
+        echo "Mysecret is '$sec'."
