--- a/.github/workflows/DevelopInBranch.yml
+++ b/.github/workflows/DevelopInBranch.yml
@@ -5,6 +5,9 @@ on: [pull_request, workflow_dispatch]
 jobs:
     build:
         runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            pull-requests: write   
         steps:
            - run: |
                echo "Workflow triggered in branch '${{ github.ref }}'."
