--- a/.github/workflows/DevelopInBranch.yml
+++ b/.github/workflows/DevelopInBranch.yml
@@ -13,4 +13,4 @@ jobs:
                echo "Workflow triggered in event '${{ github.event_name }}'."
                echo "Workflow triggered in actor '${{ github.actor }}'."
            - uses: actions/checkout@v4.3.0
-               #uses: devops-actions/actionlint@v0.1.9
+           - uses: devops-actions/actionlint@v0.1.9
